--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ h3 {
     display: none;
     flex-direction: column;
     align-items: center;
-    /* background-color: #231f20; */
+    background-color: #231f20; 
   }
   header{
       display:flex;
