--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
     /* background-color: aliceblue; */
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
 /**splash screen styling*/
 
 #splash-screen{
@@ -28,7 +27,7 @@ body {
 }
 
 #controls{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,13 +48,15 @@ body {
     color:white ;
     font-weight: bolder;
     height: 60px;
-    background-color: black;
-    border: solid 4px #e9f76a;
+    background-color: #666666;;
+    border: solid 4px #dbc14d;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
   }
   #start-btn:hover {
     background-color: #e9f76a;
+    color: #666666;
+    border: solid 4px #666666;
   }
  #game-name{
     margin-top: 10%;
@@ -64,7 +65,7 @@ body {
 }
 
 h3 {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     padding-left: 10px;
     margin-bottom: 10px;
      }
@@ -113,37 +114,55 @@ h3 {
   /*TODO: add transition to move text biger and smaller*/
   #start-game{
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
     width: 150px;
     font-family: monospace;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    text-align: center;
     font-weight: bolder;
     height: 60px;
-    border: solid 4px #e9f76a;
+    border: solid 4px #1a5531;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
   }
   #start-game:hover {
-    background-color: #e9f76a;
+    background-color: #4aad41;
+    border: solid 4px #666666;
+    color: white;
   }
   /*TODO Align button text:centered*/
   #go-back{
-    margin-top: 5%;
-    display: flex;
+    display: block;
     text-align: center; /*? why does not work*/
     width: 150px;
     font-family: monospace;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: bolder;
     height: 60px;
-    border: solid 4px #e9f76a;
+    border: solid 4px #1a5531;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
   }
   #go-back:hover {
-    background-color: #e9f76a;
+    background-color: #4aad41;
+    border: solid 4px #666666;
+    color: white;
   }
   /**? With the active class we display the bottons or remove them after event listernet*/
+  .game-over{
+    color: white;
+    margin-bottom: 25%;
+    font-size: 2rem;
+  }
+  #looser{
+    margin-top: 5%;
+  }
+  .looser-text{
+    display: none;
+  }
+  .winner-text{
+    display:none;
+  }
   .active{
       display: none;
   }
