--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ h3 {
   .game-header{
     width: 22%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: baseline;
       margin-top: 1%;
       margin-bottom: 0.5%;
@@ -200,7 +200,7 @@ h3 {
       font-weight: bold;
   }
   .timer{
-    margin-right: 5%;
+    margin-right: 6%;
   }
 
   .game-footer{
