--- a/style.css
+++ b/style.css
@@ -52,13 +52,13 @@ body {
     border: solid 4px #dbc14d;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
-  }
-  #start-btn:hover {
+}
+#start-btn:hover {
     background-color: #e9f76a;
     color: #666666;
     border: solid 4px #666666;
-  }
- #game-name{
+}
+#game-name{
     margin-top: 10%;
     display: flex;
     justify-content: center;
@@ -68,52 +68,53 @@ h3 {
     font-size: 1.5rem;
     padding-left: 10px;
     margin-bottom: 10px;
-     }
+}
   
-  h4 {
+h4 {
     margin: 10px;
-  }
+}
   
-  p {
+p {
     font-size: 1.2rem;
     padding-left: 20px;
-  }
+}
   
-  li {
+li {
     font-size: 1.2rem;
     padding-left: 10px;
-  }
+}
   
-  /** game screen styling */
+/** game screen styling */
 
-  #game-screen{
+#game-screen{
     display: none;
     flex-direction: column;
     align-items: center;
     background-color: #231f20; 
-  }
+}
   
-  header{
+header{
       display:flex;
       color: white;
-  }
-  footer{
+}
+footer{
       display:flex;
       color: white;
-  }
-  .canvas-and-button{
+      font-size: 1.3 rem;;
+}
+.canvas-and-button{
       /* margin: 2%; */
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-  }
-  #game-side{
+}
+#game-side{
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-  }
+}
 
-  #start-game{
+#start-game{
     margin-top: 5%;
     margin-bottom: 10%;
     width: 150px;
@@ -125,17 +126,17 @@ h3 {
     border: solid 4px #1a5531;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
-  }
-  #start-game:hover {
+}
+#start-game:hover {
     background-color: #4aad41;
     border: solid 4px #666666;
     color: white;
-  }
-  /*TODO Align button text:centered*/
-  #go-back{
+}
+ 
+#go-back{
     display: block;
     margin-bottom: 5%;
-    text-align: center; /*? why does not work*/
+    text-align: center; 
     width: 150px;
     font-family: monospace;
     font-size: 1.3rem;
@@ -144,35 +145,35 @@ h3 {
     border: solid 4px #1a5531;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
-  }
-  #go-back:hover {
+}
+#go-back:hover {
     background-color: #4aad41;
     border: solid 4px #666666;
     color: white;
-  }
+}
   /**? With the active class we display the bottons or remove them after event listernet*/
-  .game-over{
+.game-over{
     color: white;
     margin-bottom: 25%;
     font-size: 2rem;
-  }
-  #looser{
+}
+#looser{
     margin-top: 5%;
-  }
-  .looser-text{
+}
+.looser-text{
     display: none;
-  }
-  .winner-text{
+}
+.winner-text{
     display:none;
-  }
-  .inactive{
+}
+.inactive{
       display: none;
-  }
-  .restart-inactive{
+}
+.restart-inactive{
     display:none;
-  }
+}
 
-  #restart{
+#restart{
     margin-bottom: 5%;
     width: 150px;
     font-family: monospace;
@@ -182,40 +183,40 @@ h3 {
     border: solid 4px #1a5531;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
-  }
-  #restart:hover {
+}
+#restart:hover {
     background-color: #4aad41;
     border: solid 4px #666666;
     color: white;
-  }
+}
   
-  .game-header{
+.game-header{
     width: 22%;
     display: flex;
     justify-content: center;
     align-items: baseline;
       margin-top: 1%;
       margin-bottom: 0.5%;
-      font-size: 1.5rem;
+      font-size: 1.3rem;
       font-weight: bold;
-  }
-  .timer{
+}
+.timer{
     margin-right: 6%;
-  }
+}
 
-  .game-footer{
+.game-footer{
     margin-bottom: 1%;
     font-size: 1.5rem;
     font-weight: bold;
-  }
+}
   /* .score-board{
     margin-left: 5%;
   } */
   
-  #my-canvas{
+#my-canvas{
     margin-right: 5%;
     margin-bottom: 0.5%;
-  }
+}
 .speed{ 
     width: 150px;
     margin-top: 10%;
@@ -227,13 +228,13 @@ h3 {
     border: solid 4px #1a5531;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
-  }
-  .speed:hover {
+}
+.speed:hover {
     background-color: #4aad41;
     border: solid 4px #666666;
     color: white;
-  }
-  #difficult-game{
+}
+#difficult-game{
     margin-top: 5%;
     width: 150px;
     font-family: monospace;
@@ -243,11 +244,11 @@ h3 {
     border: solid 4px #1a5531;
     border-radius: 8px;
     transition: all 200ms ease-in-out;
-  }
-  #difficult-game:hover{
+}
+#difficult-game:hover{
     
       background-color: #4aad41;
       border: solid 4px #666666;
       color: white;
     
-  }
+}
